creating admin dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+body{
+  background-color: #1b2223;
+  color: #f4fefd;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  margin: 0 40px 20px 80px;
+  width: 100%;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.contentContainer{
+  margin: auto;
 }
+.menuContainer{
+  margin-top: 10px;
+  border-right: 1px solid white;
+  grid-column-start: 1;
+  grid-column-end: 2;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
