--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #1b2223;
-  color: #f4fefd;
+  background-color: #f4fefd;
+  color: #1b2223;
 }
 .container{
   margin: 0 40px 20px 80px;
@@ -11,12 +11,5 @@ body{
   gap: 20px;
 }
 .contentContainer{
-  margin: auto;
-}
-.menuContainer{
-  margin-top: 10px;
-  border-right: 1px solid white;
-  grid-column-start: 1;
-  grid-column-end: 2;
-
+  margin: 25px 10px;
 }
