--- a/src/Components/CreateProduct/CreateProducts.css
+++ b/src/Components/CreateProduct/CreateProducts.css
@@ -1,7 +1,7 @@
 
 form {
     width: 40vw;
-    height: 80vh;
+    height: fit-content;
     margin: 10px 0px;
     padding: 20px;
     border: 2px solid grey;
